# Reconworks-Finance-Recon

./: .gitignore  README.md  check_db.py  check_pq_publish.py  check_stage10.py  check_stage2.py  check_stage3.py  check_stage4.py  check_stage5.py  check_stage6.py  config.toml  pyproject.toml  requirements.txt
data/raw/: transactions_sample.csv  vendor_payments_sample.csv
data/reference/: policy_rules.csv  vendor_aliases.csv
docs/: powerquery_refresh.md
powerquery/: exceptions_from_folder.pq  fnLoadCsv.pq
src/reconworks/: __main__.py  cleaning.py  config.py  db.py  excel_dashboard.py  exceptions.py  ingest.py  io.py  mapping.py  matching.py  modeling.py  normalization.py  pipeline.py  powerquery_publish.py  qa_checks.py  qa_stage.py  reporting.py  sample_data.py  util.py
tests/: test_clean_parse.py  test_mapping_pick.py  test_matching_basic.py  test_modeling_vendor_id.py  test_normalization.py  test_qa_rules.py  test_sanitize.py
